<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textViewUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pessoas_home"
            android:textSize="25sp"
            android:textColor="@color/white"
            />

        <Spinner
            android:id="@+id/spinnerPessoa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/textViewLivros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/livros_home"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinnerLivro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            />

        <Button
            android:id="@+id/bnt_devolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="realizarDevolucao"
            android:background="@color/white"
            android:text="@string/buttonDevolver" />
    </LinearLayout>

</LinearLayout>