<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textViewLivro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/livros_home"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/spinnerLivro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/textViewPessoas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pessoas_home"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <Spinner
            android:id="@+id/spinnerPessoa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/buttonEmprestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="realizarEmprestimo"
            android:text="@string/buttonEmprestar"

            android:background="@color/white"/>
    </LinearLayout>

</LinearLayout>